[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.18.1",
    "email-validator>=2.1.1",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.3",
    "scikit-learn>=1.5.1",
]